returns on successfull login a jwt token
token is valid for 12 hours, a secret for token generation should be set in environment variable 'JWT_Key'
